fix: fixes box shadow and aligns program header

--- a/lesson_22/dylanlafferty/style.css
+++ b/lesson_22/dylanlafferty/style.css
@@ -102,32 +102,30 @@ body {
 
 .hero-section {
     background-image: url(hero.jpg);
-    background-attachment: sticky;
+    background-attachment: fixed;
     position: relative;
-    background-position: top;
     color: var(--background);
     background-size: cover;
     justify-content: left;
     align-items: center;
     text-align: left;
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
-    margin: 0px 0px 143px;
+    padding: 100px 0;
 }
 
 .hero-overlay {
     background-color: rgba(0, 0, 0, 0.2);
     position: absolute;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
 }
 
 .hero-content {
-    max-width: 65%;   
+    max-width: 70%;   
     z-index: 2;
     font-size: 1.2rem;
 }
@@ -156,7 +154,7 @@ em {
     font-weight: inherit;
     line-height: 1em;
     overflow: hidden;
-
+    z-index: 2;
 }
 
 .highlight::after {
@@ -201,29 +199,33 @@ h2 .highlight::after {
 /*Program section*/
 
 .programs-section {
-    overflow: hidden;
-    padding-bottom: 60px;
-    box-shadow: 12px 12px 2px 0.5px rgba(0, 0, 0, 0.101);
-    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+    margin: auto;
+    
 }
+
 section > h2 {
     font-size: 34px !important;
     font-weight: 800 !important;
     line-height: 31.5px !important;    
     max-width: 1200px;
-    margin: 0 auto 30px auto;
 
 }
 
 .programs {
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    gap: 60px;
+    display: flex;
+    flex-flow: row wrap;
     list-style: none;
-    width: 100%;
-    padding: 0 40px;
-    margin: 0 auto;
-    z-index: 2;
+    padding: 0;
+    justify-content: space-between;
+}
+
+.program {
+    display: flex;
+    flex-direction: column;
+    max-width: 48%;
 }
 
 .programs h3 {
@@ -242,11 +244,12 @@ section > h2 {
 
 /*Foot */
 .footer {
-    border-top: 1px solid brown;
     display: flex;
     justify-content: center;
     padding: 40px;
     z-index: 0;
+    box-shadow: inset 0 5px 12px 4px #e5e5e5;
+
 }
 
 
@@ -284,6 +287,7 @@ section > h2 {
         flex-direction: column;
         padding: 20px;
         text-align: center;
+        box-shadow: inset 0 5px 12px 4px #e5e5e5f3;
     }
 }
 
